use correct wrapping and monospace font for execution output

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.execution-output {
+  white-space: break-spaces;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
